add paragraph to index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     Hi! I am Muhammad Usman.
+    <p>I’m a Full Stack Web Developer & Mobile Application Developer. I love developing new skills. I want to make things that make a difference to the end user !!</p>
 </body>
 </html>
