update details of projects

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     Hi! I am Muhammad Usman.
     <p>I’m a Full Stack Web Developer & Mobile Application Developer. I love developing new skills. I want to make things that make a difference to the end user !!</p>
+    I have worked few CLI Apps. I will showcase it here tomorrow.
 </body>
 </html>
